--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -12,3 +12,9 @@ update_configs:
           dependency_type: all
           update_type: in_range
     version_requirement_updates: widen_ranges
+    
+    backend:
+  name: github
+  repo: anizio-vianna/cantautoria
+  branch: master
+  site_domain: cantautoria.netlify.app
